# p4mlir-incubator

./: .clang-format  .clang-tidy  .clangd  .gitignore  .gitmodules  CMakeLists.txt  CPPLINT.cfg  README.md
.github/workflows/: build-and-test.yml  dco-welcome.yml
build_tools/: build_mlir.sh  build_p4c_with_p4mlir_ext.sh  ubuntu_install_mlir_requirements.sh  unittest.sh
fake_p4c/: config.h  p4c-bm2-ss
include/: CMakeLists.txt
include/p4mlir/: CMakeLists.txt
include/p4mlir/Common/: Registration.h
include/p4mlir/Conversion/: CMakeLists.txt  ConversionPatterns.h  P4HIRToCoreLib.h  Passes.h  Passes.td
include/p4mlir/Dialect/: CMakeLists.txt
include/p4mlir/P4C/: translate.h  type_converter.h
include/p4mlir/Transforms/: CMakeLists.txt  DialectConversion.h  IRUtils.h  Passes.h  Passes.td
lib/: CMakeLists.txt
lib/Conversion/: CMakeLists.txt  ConversionPatterns.cpp  P4HIRToBMv2.cpp  P4HIRToCoreLib.cpp
lib/Conversion/P4HIRToBMv2IR/: CMakeLists.txt  EnsureStandardMetadata.cpp  LowerPackage.cpp  LowerToHeaderInstance.cpp  P4HIRToBMv2IR.cpp  SetCorelib.cpp  SynthesizeActions.cpp  SynthesizeTables.cpp
lib/Conversion/P4HIRToCoreLib/: CMakeLists.txt  ConversionPatterns.cpp  P4HIRToCoreLib.cpp
lib/Dialect/: CMakeLists.txt
lib/Dialect/BMv2/: CMakeLists.txt
lib/Dialect/BMv2IR/: BMv2IR_Attrs.cpp  BMv2IR_Ops.cpp  BMv2IR_Types.cpp  CMakeLists.txt
lib/Dialect/P4CoreLib/: CMakeLists.txt  P4CoreLib_Ops.cpp  P4CoreLib_Types.cpp
lib/Dialect/P4HIR/: CMakeLists.txt  P4HIR.cpp  P4HIR_Attrs.cpp  P4HIR_Mangle.cpp  P4HIR_MemorySlot.cpp  P4HIR_Ops.cpp  P4HIR_Symbols.cpp  P4HIR_TypeInterfaces.cpp  P4HIR_Types.cpp
lib/Dialect/P4HIR/Pipelines/: CMakeLists.txt  CommonFrontEndPipeline.cpp
lib/P4C/: CMakeLists.txt  translate.cpp  type_converter.cpp
lib/Targets/: CMakeLists.txt
lib/Targets/BMv2/: CMakeLists.txt  Target.cpp
lib/Transforms/: CMakeLists.txt  CopyInCopyOutElimination.cpp  EnumElimination.cpp  EvaluateStaticAssert.cpp  ExpandEmit.cpp  FlattenCFG.cpp  FlattenStructs.cpp  IRUtils.cpp  InlineParserControl.cpp  InlineParsers.cpp  PrintParsersGraph.cpp  RemoveAliases.cpp  RemoveParserControlFlow.cpp  RemoveSoftCF.cpp  SerEnumElimination.cpp  SimplifyParsers.cpp  SimplifySelect.cpp  StrengthReduction.cpp  SwitchElimination.cpp  SymbolDCE.cpp  TupleToStruct.cpp  UseControlPlaneNames.cpp
lib/Transforms/Utils/: CMakeLists.txt  DialectConversion.cpp
lib/Utilities/: CMakeLists.txt  export_to_p4.cpp  export_to_p4.h  extended_formatted_stream.h  formatted_stream.h  interleave_with_error.h  mlir_to_p4.cpp  mlir_to_p4.h
test/: CMakeLists.txt  lit.cfg.py  lit.site.cfg.py.in  p4mlir-opt.mlir  p4mlir-to-json.mlir
test/Conversion/BMv2IR/: action.mlir  control.mlir  ensure-std-metadata.mlir  init-entries.mlir  lower-package.mlir  lower-to-header-instance.mlir  parser.mlir  setcorelib-attr.mlir  synth-action.mlir  synth-table.mlir  table-hit-miss.mlir
test/Conversion/P4CoreLib/: control-locals.mlir  emit.mlir  packet_in.mlir  packet_in_hs.mlir  packet_in_hs.p4  packet_in_hs_varbit.p4  static_assert.mlir  subparser.mlir  verify.mlir
test/Dialect/P4CoreLib/: emit.mlir  emit_struct.mlir  packet_in.mlir  verify.mlir
test/Dialect/P4HIR/: action.mlir  alloca.mlir  annotations.mlir  apply.mlir  array.mlir  asm.mlir  binop.mlir  bits.mlir  bool.mlir  call.mlir  cmp.mlir  concat.mlir  control.mlir  enum.mlir  exit.mlir  extern.mlir  for.mlir  for_err.mlir  header.mlir  header_stack.mlir  if.mlir  instantiate.mlir  loadstore.mlir  newtype.mlir  package.mlir  parser.mlir  scope.mlir  shl_shr.mlir  slice.mlir  string.mlir  struct.mlir  switch.mlir  table-entries.mlir  table.mlir  ternary.mlir  tuple.mlir  types.mlir  uninit.mlir  unop-errors.mlir  unop.mlir
test/Export/: bool_test.mlir
test/Export/BMV2/: bool_test.mlir
test/Targets/BMv2/: action.mlir  calculation.mlir  checksum.mlir  deparser.mlir  parser.mlir  parser_json.mlir  pipelines.mlir  table-hit-miss.mlir
test/Transforms/Dealias/: dealias_control.mlir  dealias_func.mlir  dealias_parser.mlir  dealias_var.mlir
test/Transforms/Flatten/: if.mlir  scope.mlir  ternary.mlir
test/Transforms/Folds/: array.mlir  array_extract.mlir  binop.mlir  br.mlir  cast.mlir  cmpop.mlir  concat.mlir  cond_br.mlir  if.mlir  scope_simplification.mlir  select.mlir  set.mlir  shl_shr.mlir  slice.mlir  struct.mlir  struct_extract.mlir  switch-apply.mlir  switch.mlir  switch_cases.mlir  tuple.mlir  unary.mlir  variable.mlir
test/Transforms/Inline/: inline-action.mlir  inline-function.mlir
test/Transforms/Passes/: enum-elimination.mlir  evaluate-static-assert-error.mlir  evaluate-static-assert.mlir  flatten-structs.mlir  mem2reg.mlir  remove-aliases-error.mlir  remove-aliases.mlir  remove-parser-control-flow.mlir  remove-parser-if.mlir  remove-parser-switch.mlir  remove-soft-cf-composite.mlir  remove-soft-cf-control.mlir  remove-soft-cf-if-switch.mlir  remove-soft-cf-loop.mlir  ser-enum-elimination.mlir  simplify-parsers.mlir  simplify-select-concat-args.mlir  simplify-select-flatten-tuples.mlir  simplify-select-replace-bools.mlir  simplify-select-replace-ranges.mlir  sroa.mlir  strength-reduction.mlir  switch-elimination.mlir  symbol-dce.mlir  tuple-to-struct.mlir  use-controlplane-name.mlir
test/Translate/Control/: apply.p4  apply.p4.ref  control.p4  control.p4.ref  inner_inst.p4  inner_inst.p4.ref  table-entries.p4  table-entries.p4.ref  table.p4  table.p4.ref  table_basic.p4  (+1 more)
tools/: CMakeLists.txt  generate_reference_files.sh
tools/p4-reference-checker/: CMakeLists.txt  main.cpp
tools/p4mlir-export/: CMakeLists.txt  README.md  json_emitter.cpp  json_emitter.h  options.cpp
tools/p4mlir-export-bmv2/: CMakeLists.txt  README.md  bool_test.json  bool_test.mlir  json_emitter.cpp  json_emitter.h  options.h  p4mlir-export-bmv2.cpp  simplebmv2.json  simplebmv2.mlir  simplebmv2.p4
tools/p4mlir-opt/: CMakeLists.txt  p4mlir-opt.cpp
tools/p4mlir-to-json/: CMakeLists.txt  p4mlir-to-json.cpp
tools/p4mlir-translate/: CMakeLists.txt  main.cpp  mlir_to_p4.cpp  mlir_to_p4.h  options.cpp  options.h  translate.cpp  translate.h
(+178 files in other folders)
